# finrust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.example.yaml  docker-compose.yaml  dump.sh  dumped.json
.junie/: guidelines.md
src/: cli.rs  config.rs  handlers.rs  helpers.rs  lib.rs  main.rs  middleware.rs  openapi_tests.rs  router.rs  schemas.rs  test_utils.rs  tests.rs
src/cli/: commands.rs  mod.rs
src/cli/commands/: account_overlay.rs  generate_prompt.rs  import_django.rs  initdb.rs  migrate_and_serve.rs  mod.rs  serve.rs
src/handlers/: accounts.rs  cache.rs  categories.rs  health.rs  manual_account_states.rs  metrics.rs  mod.rs  prompt.rs  recurring_income.rs  scenarios.rs  statistics.rs  tags.rs  timeseries.rs  transactions.rs  users.rs
src/helpers/: colors.rs  converters.rs  mod.rs  stats.rs
tests/: e2e_advanced.rs  e2e_basic.rs  e2e_intermediate.rs  e2e_snapshot.rs  integration_tests.rs  openapi_tests.rs
tests/common/: mod.rs
workspace/common/: Cargo.toml  README.md
workspace/common/src/: converters.rs  lib.rs  metrics.rs  statistics.rs  timeseries.rs
workspace/compute/: Cargo.toml  README.md
workspace/compute/docs/todos/: transaction_processing.md  transaction_prompt1.md
workspace/compute/src/: account.rs  account_stats.rs  categories.rs  error.rs  lib.rs  metrics.rs  tags.rs  transaction.rs
workspace/compute/src/account/: balance.rs  cache.rs  date_split.rs  forecast.rs  merge.rs  testing.rs  unpaid_recurring.rs  utils.rs
workspace/compute/src/account/balance/: account_state.rs  recurring.rs  transactions.rs
workspace/compute/src/account/balance/recurring/: common.rs  income.rs  transactions.rs
workspace/compute/src/account/forecast/: recurring.rs
workspace/compute/src/account/testing/: helpers.rs  scenario_balance.rs  scenario_balance_no_instances.rs  scenario_forecast.rs  scenario_forecast_no_instances.rs  scenario_forecast_no_instances_outside_range.rs  scenario_isolation.rs  scenario_merge_real.rs  scenario_merge_real_failing.rs  scenario_multiple_accounts.rs  scenario_reconciliation.rs  scenario_reconciliation_outside_range.rs  scenario_unreconciled.rs  scenario_unreconciled_forecast.rs
workspace/compute/src/metrics/: account_metrics.rs  account_role.rs  cross_account_metrics.rs
workspace/frontend/: Cargo.toml  README.md  gemini.html  index.html
workspace/frontend/src/: api_client.rs  colors.rs  common.rs  components.rs  formatting.rs  hooks.rs  lib.rs  mock_data.rs  pages.rs  router.rs  settings.rs
workspace/frontend/src/api_client/: account.rs  category.rs  manual_account_state.rs  metrics.rs  recurring_transaction.rs  scenario.rs  statistics.rs  timeseries.rs  transaction.rs
workspace/frontend/src/common/: error.rs  fetch_hook.rs  fetch_render.rs  loading.rs  toast.rs
workspace/frontend/src/components/: accounts.rs  ai_prompt.rs  budgets.rs  categories.rs  dashboard.rs  forecast.rs  layout.rs  manual_states.rs  mod.rs  navbar.rs  recurring.rs  reports.rs  scenarios.rs  settings.rs  transactions.rs
workspace/frontend/src/components/accounts/: account_card.rs  account_cashflow_chart.rs  account_chart.rs  account_edit.rs  account_forecast.rs  account_metrics.rs  account_min_balance_chart.rs  account_modal.rs  account_stats.rs  goal_progress.rs  view.rs
workspace/frontend/src/components/ai_prompt/: view.rs
workspace/frontend/src/components/budgets/: progress.rs  view.rs
workspace/frontend/src/components/categories/: category_card.rs  category_modal.rs  tree_item.rs  view.rs
workspace/frontend/src/components/common/: pagination.rs
workspace/frontend/src/components/dashboard/: account_bubbles.rs  activity.rs  category_stats.rs  chart.rs  metrics.rs  stats.rs  view.rs
workspace/frontend/src/components/forecast/: chart.rs  stats.rs  view.rs
workspace/frontend/src/components/instances/: instance_edit_modal.rs  list.rs  mod.rs  view.rs
workspace/frontend/src/components/layout/: breadcrumb.rs  layout.rs  navbar.rs  sidebar.rs
workspace/frontend/src/components/manual_states/: account_view.rs  modal.rs  view.rs
workspace/frontend/src/components/modals/: mod.rs  recurring_modal.rs  transaction_modal.rs
workspace/frontend/src/components/recurring/: instance_modal.rs  list.rs  missing_instances.rs  recurring_modal.rs  view.rs
workspace/frontend/src/components/reports/: charts.rs  view.rs
workspace/frontend/src/components/scenarios/: scenario_card.rs  scenario_modal.rs  view.rs
workspace/frontend/src/components/settings/: view.rs
workspace/frontend/src/components/transactions/: table.rs  transaction_edit.rs  transaction_modal.rs  view.rs
workspace/frontend/src/pages/: about.rs  accounts.rs  admin.rs  ai_prompt.rs  categories.rs  dashboard.rs  home.rs  instances.rs  manual_states.rs  recurring.rs  recurring_detail.rs  scenario_detail.rs  scenarios.rs  transaction_edit.rs  transactions.rs
workspace/frontend/workspace/frontend/src/components/: layout.rs
workspace/migration/: Cargo.toml  README.md
workspace/model/: Cargo.toml  README.md
workspace/model/docs/todos/: transaction_system.md
workspace/model/src/: entities.rs  lib.rs  transaction.rs
workspace/model/src/entities/: account.rs  account_allowed_user.rs  account_tag.rs  category.rs  imported_transaction.rs  imported_transaction_tag.rs  manual_account_state.rs  one_off_transaction.rs  one_off_transaction_tag.rs  recurring_income.rs  recurring_income_tag.rs  recurring_transaction.rs  recurring_transaction_instance.rs  recurring_transaction_tag.rs  scenario.rs  tag.rs  user.rs
workspace/model/src/entities/imported_transaction/: transaction.rs
workspace/model/src/entities/one_off_transaction/: transaction.rs
workspace/model/src/entities/recurring_income/: transaction.rs
workspace/model/src/entities/recurring_transaction/: transaction.rs
workspace/model/src/entities/recurring_transaction_instance/: transaction.rs
(+18 files in other folders)
