[package]
name = "finrust"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "workspace/model",
    "workspace/migration",
    "workspace/compute",
    "workspace/common",
]


[dependencies]
model = { path = "workspace/model" }
compute = { path = "workspace/compute" }
common = { path = "workspace/common" }


tracing = "0.1"
tracing-subscriber = "0.3"
