[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
rusty-money = "^0.4.1"
rust_decimal = { version = "^1.37.2", features = ["serde-with-str"] }
chrono = { version = "^0.4.41", features = ["serde"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "4.0", features = ["chrono"] }

[dev-dependencies]
