[package]
name = "compute"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
model = { path = "../model" }

sea-orm = { version = "^1.1.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
rusty-money = "^0.4.1"
rust_decimal = "^1.37.2"
chrono = "^0.4.41"
polars = { version = "^0.48.1", features = ["lazy", "cum_agg"] }
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
migration = { path = "../migration" }
tracing-subscriber = "0.3"
