[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Yew framework for WebAssembly frontend
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# yewdux = "0.10"

# WebAssembly and browser APIs
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# HTTP client for API calls
gloo-net = { version = "0.5", features = ["http"] }
gloo-timers = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Styling and CSS
stylist = { version = "0.13", features = ["yew"] }

# Utilities
log = "0.4"
wasm-logger = "0.2"
chrono = "0.4"
rust_decimal = "1.36"

# Common workspace dependencies
common = { path = "../common" }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlFormElement",
    "FormData",
    "Window",
]